[ADD] add detector files
Signed-off-by: JangryulKim <urmydata@snu.ac.kr>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-ADD_EXECUTABLE(prototype main.cc config.cc model.cc cuda.c image_opencv.cc image.cc dataset.cc thread.cc)
+ADD_EXECUTABLE(prototype main.cc config.cc model.cc cuda.c image_opencv.cc image.cc dataset.cc thread.cc box.cc detector.cc region_wrapper.cc yolo_wrapper.cc coco.cc)
 TARGET_LINK_LIBRARIES(prototype m config++ ${CUDNN_LIBRARY} nvinfer tkDNN stdc++ ${CUDA_LIBRARIES} ${OpenCV_LIBRARIES})
