Update for INT8

--- a/sample.cfg
+++ b/sample.cfg
@@ -19,6 +19,7 @@ configs = {
 			bin_path = "/mnt/disk/user/jedi-master/layers";
 			cfg_path = "/mnt/disk/user/jedi-master/layers/yolo_tucker_layer.cfg";
 			image_path = "/mnt/disk/user/coco2017/all_images.txt";
+			image_label_path = "/home/user/disk/coco2017/all_labels.txt";
 			name_path = "/mnt/disk/user/jedi-master/coco.names";
 			offset = "0";
 			sample_size = "4952";
@@ -45,7 +46,7 @@ configs = {
 			cut_points = "67";
 			devices = "GPU";
 			dla_cores = "0"; 
-			data_type = "FP16"
+			data_type = "INT8"
 		},	
 		{
 			# if you want to use multi-network, then just change the instance num parameter as 2
