[MOD] aupport int8
- add some configurations
- set network variables to deploy int8
- change model path slightly
- change default results file path

Signed-off-by: JangryulKim <urmydata@snu.ac.kr>

--- a/sample.cfg
+++ b/sample.cfg
@@ -9,6 +9,10 @@ configs = {
 			# cfg path: the directory of network cfg file in the darknet format
 			# image path: the file contains the list of test images
 			# 		Check the sample file on ./data directory
+			# image label path: the file contains the label of test images for INT8 calibration 
+			# 		It is not used to run FP16 and FP32
+			# calib images num: the number of images for INT8 calibration 
+			# 		It is not used to run FP16 and FP32
 			# name path: the coco dataset class file
 			# offset: the image offset to inference
 			# sample size: the number of image to inference
@@ -19,6 +23,8 @@ configs = {
 			bin_path = "./data/bin/yolo2";
 			cfg_path = "./data/cfg/yolo2_relu.cfg";
 			image_path = "./data/all_images.txt";
+			image_label_path = "./data/all_labels.txt";
+			calib_images_num = "1000";
 			name_path = "./data/coco.names";
 			offset = "0";
 			sample_size = "2476";
@@ -54,6 +60,7 @@ configs = {
 			bin_path = "./data/bin/yolo2";
 			cfg_path = "./data/cfg/yolo2_relu.cfg";
 			image_path = "./data/all_images.txt";
+			image_label_path = "./data/all_labels.txt";
 			name_path = "./data/coco.names";
 			offset = "2476";
 			sample_size = "2476";
