[ADD] add calib_image_path configuration
Signed-off-by: JangryulKim <urmydata@snu.ac.kr>

--- a/sample.cfg
+++ b/sample.cfg
@@ -9,10 +9,10 @@ configs = {
 			# cfg path: the directory of network cfg file in the darknet format
 			# image path: the file contains the list of test images
 			# 		Check the sample file on ./data directory
-			# image label path: the file contains the label of test images for INT8 calibration 
-			# 		It is not used to run FP16 and FP32
+			# calib image path: the file contains the list of imagesfor INT8 calibration
+			# calib image label path: the file contains the label of test images for INT8 calibration 
 			# calib images num: the number of images for INT8 calibration 
-			# 		It is not used to run FP16 and FP32
+			# 		calib variables are not used when running as FP16 or FP32
 			# name path: the coco dataset class file
 			# offset: the image offset to inference
 			# sample size: the number of image to inference
@@ -23,7 +23,8 @@ configs = {
 			bin_path = "./data/bin/yolo2";
 			cfg_path = "./data/cfg/yolo2_relu.cfg";
 			image_path = "./data/all_images.txt";
-			image_label_path = "./data/all_labels.txt";
+			calib_image_path = "./data/all_images.txt";
+			calib_image_label_path = "./data/all_labels.txt";
 			calib_images_num = "1000";
 			name_path = "./data/coco.names";
 			offset = "0";
