[MOD] changes about latency and loading images
- now measure average latency and save that
- load image as binary
- image width, height info file is needed to use binary image
- this version does not need to resize image

Signed-off-by: JangryulKim <urmydata@snu.ac.kr>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,6 @@ SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 ADD_EXECUTABLE(proc main.cc config.cc model.cc cuda.c image_opencv.cc image.cc dataset.cc thread.cc box.cc detector.cc region_wrapper.cc yolo_wrapper.cc coco.cc)
 TARGET_LINK_LIBRARIES(proc m config++ ${CUDNN_LIBRARY} nvinfer tkDNN stdc++ ${CUDA_LIBRARIES} ${OpenCV_LIBRARIES})
+
+ADD_EXECUTABLE(network_analyzer analyzer.cc config.cc model.cc cuda.c image_opencv.cc image.cc dataset.cc thread.cc box.cc detector.cc region_wrapper.cc yolo_wrapper.cc coco.cc)
+TARGET_LINK_LIBRARIES(network_analyzer m config++ nvinfer tkDNN stdc++ ${CUDA_LIBRARIES} ${OpenCV_LIBS})
