Unused option is removed.
- Unused option is removed.
- all cfg files are updated.

Signed-off-by: EunJin Jeong <chjej202@iris.snu.ac.kr>

--- a/cspresnext.cfg
+++ b/cspresnext.cfg
@@ -7,19 +7,24 @@ configs = {
 			bin_path = "/sdcard/jrkim/data/bin/cspresnext";
 			cfg_path = "/sdcard/jrkim/data/cfg/csresnext50-panet-spp_relu.cfg";
 			image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
+			calib_image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
+			calib_images_num = "100";
+			gpu_calib_table = "/sdcard/chjej202/models2/cspresnext/model416x416_0.227_GPU_INT8_1-calibration.table";
+			dla_calib_table = "/sdcard/chjej202/models2/cspresnext/model416x416_0.227_DLA_INT8_1-calibration.table";
 			name_path = "/sdcard/jrkim/data/coco.names";
 			batch = "1"
 			offset = "0";
-			sample_size = "500"
+			sample_size = "4952"
 			
-			device_num = "4"
+			device_num = "3"
 			pre_thread_num = "1"
 			post_thread_num = "1"
-			buffer_num = "4"
-			cut_points = "5,34,58,227"
-			devices = "GPU,DLA,DLA,GPU"
-			dla_cores = "0,1,0,1"
-			data_type = "FP16"
+			buffer_num = "8"
+			streams = "4,4,4,4"
+			cut_points = "13,51,227"
+			devices = "GPU,DLA,GPU"
+			dla_cores = "0,2,0,1"
+			data_type = "INT8"
 		}	
 	)
 }
