--- a/yolov2tiny.cfg
+++ b/yolov2tiny.cfg
@@ -12,12 +12,13 @@ configs = {
 			offset = "0";
 			sample_size = "4952"
 			
-			device_num = "2"
+			device_num = "1"
 			pre_thread_num = "4"
-			post_thread_num = "1"
+			post_thread_num = "2"
 			buffer_num = "8"
-			cut_points = "5,23"
-			devices = "DLA,GPU"
+			streams = "4,4,4,4"
+			cut_points = "23"
+			devices = "GPU"
 			dla_cores = "0,1,0,1"
 			data_type = "FP16"
 		}	
