--- a/yolov3.cfg
+++ b/yolov3.cfg
@@ -7,19 +7,24 @@ configs = {
 			bin_path = "/sdcard/jrkim/data/bin/yolo3";
 			cfg_path = "/sdcard/jrkim/data/cfg/yolo3_relu.cfg";
 			image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
+			calib_image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
+			calib_images_num = "1000";
+			gpu_calib_table = "/sdcard/chjej202/models2/yolov3/model416x416_0.178_GPU_INT8_1-calibration.table";
+			dla_calib_table = "/sdcard/chjej202/models2/yolov3/model416x416_0.178_DLA_INT8_1-calibration.table";
 			name_path = "/sdcard/jrkim/data/coco.names";
 			batch = "1"
 			offset = "0";
-			sample_size = "1000"
+			sample_size = "4952"
 			
-			device_num = "3"
-			pre_thread_num = "1"
+			device_num = "2"
+			pre_thread_num = "2"
 			post_thread_num = "1"
-			buffer_num = "4"
-			cut_points = "27,46,178"
-			devices = "DLA,DLA,GPU"
-			dla_cores = "0,1,0,1"
-			data_type = "FP16"
+			buffer_num = "8"
+			streams = "4,4,4,4"
+			cut_points = "57,178"
+			devices = "DLA,GPU"
+			dla_cores = "2,1,0,1"
+			data_type = "INT8"
 		}	
 	)
 }
