--- a/yolov3tiny.cfg
+++ b/yolov3tiny.cfg
@@ -7,17 +7,20 @@ configs = {
 			bin_path = "/sdcard/jrkim/data/bin/yolo3tiny";
 			cfg_path = "/sdcard/jrkim/data/cfg/yolo3tiny_relu.cfg";
 			image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
+			calib_image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
+			calib_images_num = "100";
 			name_path = "/sdcard/jrkim/data/coco.names";
 			batch = "1"
 			offset = "0";
 			sample_size = "4952"
 			
-			device_num = "2"
+			device_num = "1"
 			pre_thread_num = "4"
 			post_thread_num = "1"
 			buffer_num = "8"
-			cut_points = "5,34"
-			devices = "DLA,GPU"
+			streams = "4,4,4,4"
+			cut_points = "34"
+			devices = "GPU"
 			dla_cores = "0,1,0,1"
 			data_type = "FP16"
 		}	
