--- a/yolov4tiny.cfg
+++ b/yolov4tiny.cfg
@@ -7,19 +7,26 @@ configs = {
 			bin_path = "/sdcard/jrkim/data/bin/yolo4tiny";
 			cfg_path = "/sdcard/jrkim/data/cfg/yolo4tiny_relu.cfg";
 			image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
+			calib_image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
+			calib_images_num = "100";
+			gpu_calib_table = "/sdcard/chjej202/models2/yolov4tiny/model416x416_0.56_GPU_INT8_1-calibration.table";
+			dla_calib_table = "/sdcard/chjej202/models2/yolov4tiny/model416x416_0.56_DLA_INT8_1-calibration.table";
 			name_path = "/sdcard/jrkim/data/coco.names";
+			#batch = "16"
 			batch = "1"
 			offset = "0";
+			#sample_size = "309"
 			sample_size = "4952"
-			
-			device_num = "4"
+		
+			device_num = "3"
 			pre_thread_num = "4"
 			post_thread_num = "1"
-			buffer_num = "8"
-			cut_points = "10,14,21,56"
-			devices = "GPU,DLA,DLA,GPU"
-			dla_cores = "0,1,0,1"
-			data_type = "FP16"
+			buffer_num = "16"
+			streams = "3,6,8,6"
+			cut_points = "18,30,56"
+			devices = "GPU,DLA,GPU"
+			dla_cores = "0,2,0,1"
+			data_type = "INT8"
 		}	
 	)
 }
