Single calibration table is used for pipelining.
- Single calibration table (from DLA) is used for pipelining.
- If the first layer is Shortcut, it sets calibration value of the previous node to avoid mAP drop.
- Added a new line before the inference time printing.

Signed-off-by: EunJin Jeong <chjej202@iris.snu.ac.kr>

--- a/yolov2.cfg
+++ b/yolov2.cfg
@@ -8,22 +8,22 @@ configs = {
 			cfg_path = "/sdcard/jrkim/data/cfg/yolo2_relu.cfg";
 			image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
 			calib_image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
-			calib_images_num = "1000";
-			gpu_calib_table = "/sdcard/chjej202/models2/yolov2/model416x416_0.53_GPU_INT8_1-calibration.table";
-			dla_calib_table = "/sdcard/chjej202/models2/yolov2/model416x416_0.53_DLA_INT8_1-calibration.table";
+			calib_images_num = "100";
+			calib_table = "/sdcard/chjej202/models2/yolov2/model416x416_0.53_DLA_INT8_1-calibration.table";
 			name_path = "/sdcard/jrkim/data/coco.names";
 			batch = "1"
+			batch_thread_num = "1"
 			offset = "0";
 			sample_size = "4952"
 			
-			device_num = "2"
+			device_num = "1"
 			pre_thread_num = "4"
-			post_thread_num = "1"
+			post_thread_num = "4"
 			buffer_num = "8"
-			streams ="4,4,4,4"
-			cut_points = "19,53"
-			devices = "DLA,GPU"
-			dla_cores = "2,1,0,1"
+			streams ="4,4,1,1"
+			cut_points = "53"
+			devices = "GPU"
+			dla_cores = "0,1,0,1"
 			data_type = "INT8"
 		}	
 	)
