--- a/yolov4.cfg
+++ b/yolov4.cfg
@@ -10,8 +10,7 @@ configs = {
 			image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
 			calib_image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
 			calib_images_num = "100";
-			gpu_calib_table = "/sdcard/chjej202/models2/yolov4/model416x416_0.268_GPU_INT8_1-calibration.table";
-			dla_calib_table = "/sdcard/chjej202/models2/yolov4/model416x416_0.268_DLA_INT8_1-calibration.table";
+			calib_table = "/sdcard/chjej202/models2/yolov4/model416x416_0.268_DLA_INT8_1-calibration.table";
 			name_path = "/sdcard/jrkim/data/coco.names";
 			batch = "1"
 			offset = "0";
@@ -25,7 +24,7 @@ configs = {
 			streams = "4,4,4,4"
 			devices = "GPU,DLA,GPU"
 			dla_cores = "0,2,0,1"
-			data_type = "INT8"
+			data_type = "FP16"
 		}	
 	)
 }
