--- a/densenet.cfg
+++ b/densenet.cfg
@@ -10,21 +10,20 @@ configs = {
 			image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
 			calib_image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
 			calib_images_num = "100";
-			gpu_calib_table = "/sdcard/chjej202/models2/densenet/model416x416_0.507_GPU_INT8_1-calibration.table";
-			dla_calib_table = "/sdcard/chjej202/models2/densenet/model416x416_0.507_DLA_INT8_1-calibration.table";
+			calib_table = "/sdcard/chjej202/models2/densenet/model416x416_0.507_DLA_INT8_1-calibration.table";
 			name_path = "/sdcard/jrkim/data/coco.names";
 			batch = "1"
 			offset = "0";
 			sample_size = "4952"
 			
-			device_num = "2"
-			pre_thread_num = "2"
+			device_num = "1"
+			pre_thread_num = "1"
 			post_thread_num = "1"
 			buffer_num = "8"
 			streams = "4,4,4,4"
-			cut_points = "97,507"
-			devices = "DLA,GPU"
-			dla_cores = "2,1,0,1"
+			cut_points = "507"
+			devices = "DLA"
+			dla_cores = "0,1,0,1"
 			data_type = "INT8"
 		}	
 	)
