stuckWhile calculation method is enhanced.
Signed-off-by: EunJin Jeong <chjej202@iris.snu.ac.kr>

--- a/yolov2tiny.cfg
+++ b/yolov2tiny.cfg
@@ -8,19 +8,22 @@ configs = {
 			cfg_path = "/sdcard/jrkim/data/cfg/yolo2tiny_relu.cfg";
 			image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
 			name_path = "/sdcard/jrkim/data/coco.names";
+			calib_image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
+			calib_images_num = "100";
+			calib_table = "/sdcard/chjej202/models2/yolov2tiny/model416x416_0.23_DLA_INT8_1-calibration.table";
 			batch = "1"
 			offset = "0";
 			sample_size = "4952"
 			
 			device_num = "1"
-			pre_thread_num = "4"
+			pre_thread_num = "6"
 			post_thread_num = "2"
-			buffer_num = "8"
-			streams = "4,4,4,4"
+			buffer_num = "16"
+			streams = "8"
 			cut_points = "23"
 			devices = "GPU"
 			dla_cores = "0,1,0,1"
-			data_type = "FP16"
+			data_type = "INT8"
 		}	
 	)
 }
