--- a/yolov3tiny.cfg
+++ b/yolov3tiny.cfg
@@ -9,6 +9,7 @@ configs = {
 			image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
 			calib_image_path = "/sdcard/jrkim/data/coco2017/all_images.txt";
 			calib_images_num = "100";
+			calib_table = "/sdcard/chjej202/models2/yolov3tiny/model416x416_0.34_DLA_INT8_1-calibration.table";
 			name_path = "/sdcard/jrkim/data/coco.names";
 			batch = "1"
 			offset = "0";
@@ -22,7 +23,7 @@ configs = {
 			cut_points = "34"
 			devices = "GPU"
 			dla_cores = "0,1,0,1"
-			data_type = "FP16"
+			data_type = "INT8"
 		}	
 	)
 }
