Some codes are cleaned.
Signed-off-by: EunJin Jeong <chjej202@iris.snu.ac.kr>

--- a/sample.cfg
+++ b/sample.cfg
@@ -2,11 +2,11 @@ configs = {
 	instance_num = "1";
 	instances = (
 		{
-			# network name: currently below networks are supported
-			# 		yolo2, yolo3, yolo4, yolo2tiny, yolo3tiny, cspresnext, densenet (densenet+yolo)
+			# app_type : application type. Currently, YoloApplication and CenternetApplication are supported.
+			# network name: the network name
 			# model dir: the directory to save a plan file
 			# bin path: the directory of weight file in tkDNN weight file format
-			# cfg path: the directory of network cfg file in the darknet format
+			# cfg path: the directory of network cfg file in the darknet format (YoloApplication-specific option)
 			# image path: the file contains the list of test images
 			# 		Check the sample file on ./data directory
 			# calib image path: the file contains the list of imagesfor INT8 calibration
@@ -18,6 +18,8 @@ configs = {
 			# sample size: the number of image to inference
 			# 		If the offset is zero and sample size is 4952,
 			#		then the program inference from image #0 to image #4951
+            #       If the sample size is 0, JEDI will run infinitely
+			app_type = "YoloApplication";
 			network_name="yolo2";
 			model_dir = "./data/models/yolov2/";
 			bin_path = "./data/bin/yolo2";
@@ -31,25 +33,30 @@ configs = {
 			sample_size = "2476";
 
 			# batch: the batch size
+			# batch_thread_num: the number of threads for handling preprocessing of batch processing 
 			# device num: the number of stages of pipelining
 			# pre thread num: the number of pre-processing threads
 			# post thread num: the number of post-processing threads
-			# buffer num: the number of buffers between stages (it is same as the number of streams on stage)
+			# buffer num: the number of buffers between stages
 			# cut points: the cut points of the pipelining
 			# 			the last number of cut points is the last layer of the network
 			#			in the case of yolov2, the 53 is the last layer
+			# streams: the number of streams per each pipelining stage
 			# devices: the mapping stage to processing element composition
 			# dla_cores: the specific mapping of DLA cores
 			# 		For example, the case of "DLA,DLA,GPU" and "0,1,0" then, 
 			#		the first stage is mapped to DLA0, the second stage is mapped to DLA1 
 			# 		and the last stage is mapped on GPU (If mapped on GPU, it is no affected by allocated dla core)
+            #       if the core number is 2, two processing elements are mapped to a single pipelining stage (Only affected on DLA)
 			# data type: currently FP16 is supported
 			device_num = "2";
 			batch = "1";
+			batch_thread_num = "1";
 			pre_thread_num = "1";
 			post_thread_num = "1";
 			buffer_num = "2"
 			cut_points = "20,53";
+			streams = "2,2";
 			devices = "DLA,GPU";
 			dla_cores = "0,1"; 
 			data_type = "FP16"
