code is changed to support tensorrt8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,6 @@ set (CMAKE_C_FLAGS         "${CMAKE_C_FLAGS} -Wall -g -Ofast -march=native ")
 set (CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -g -Ofast -march=native ")
 
 include_directories (${OpenCV_INCLUDE_DIRS})
-include_directories (/usr/local/cuda/include/)
+include_directories (/usr/local/cuda/include/ /usr/local/include/tkDNN/)
 
 add_subdirectory (src)
