--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,17 @@
+cmake_minimum_required(VERSION 3.5)
+
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-CUDA_ADD_LIBRARY(cuda_kernels cnet_detections.cu)
+project(tinyJEDI VERSION 1.0.1 DESCRIPTION "tinyJEDI description")
+set(DEFAULT_BUILD_TYPE "Release")
 
-ADD_EXECUTABLE(proc main.cc config.cc model.cc cuda.c image_opencv.cc image.cc thread.cc box.cc detector.cc region_wrapper.cc yolo_wrapper.cc coco.cc util.cc inference_application.cc yolo_application.cc image_dataset.cc cnet_application.cc)
-TARGET_LINK_LIBRARIES(proc m config++ nvinfer tkDNN stdc++ ${CUDA_LIBRARIES} ${OpenCV_LIBS} cuda_kernels kernels)
+ADD_EXECUTABLE(proc main.cc config.cc model.cc cuda.c image_opencv.cc image.cc box.cc region_wrapper.cc yolo_wrapper.cc coco.cc inference_application.cc yolo_application.cc runner.cc)
+TARGET_LINK_LIBRARIES(proc m config++ nvinfer tkDNN stdc++ ${CUDA_LIBRARIES} ${OpenCV_LIBS} kernels)
 
-ADD_EXECUTABLE(network_analyzer analyzer.cc config.cc inference_application.cc yolo_application.cc image_dataset.cc region_wrapper.cc yolo_wrapper.cc coco.cc util.cc image_opencv.cc box.cc cnet_application.cc cuda.c)
-TARGET_LINK_LIBRARIES(network_analyzer m config++ nvinfer tkDNN stdc++ ${CUDA_LIBRARIES} ${OpenCV_LIBS} cuda_kernels kernels)
+include_directories(.)
+add_library(tinyJEDI SHARED config.cc model.cc cuda.c image_opencv.cc image.cc box.cc region_wrapper.cc yolo_wrapper.cc coco.cc inference_application.cc yolo_application.cc runner.cc)
+TARGET_LINK_LIBRARIES(tinyJEDI m config++ nvinfer tkDNN stdc++ ${CUDA_LIBRARIES} ${OpenCV_LIBS} kernels)
 
-add_executable(compute_coco_map coco_map.cc)
-target_link_libraries (compute_coco_map json-c jpeg nvinfer tkDNN kernels ${CUDA_LIBRARIES} ${OpenCV_LIBS})
+install(TARGETS tinyJEDI DESTINATION /usr/lib)
+
+install(FILES runner.h cuda.h coco.h model.h inference_application.h yolo_application.h region_wrapper.h yolo_wrapper.h image.h image_opencv.h variable.h config.h config_data.h box.h DESTINATION include/tinyJEDI)
