[ADD] add save function and runner2
- add runner2 which does not use threading
- add save function to store detection results
- also modify small things

Signed-off-by: JangryulKim <urmydata@snu.ac.kr>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,13 +5,16 @@ SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 project(tinyJEDI VERSION 1.0.1 DESCRIPTION "tinyJEDI description")
 set(DEFAULT_BUILD_TYPE "Release")
 
-ADD_EXECUTABLE(proc main.cc config.cc model.cc cuda.c image_opencv.cc image.cc box.cc region_wrapper.cc yolo_wrapper.cc coco.cc inference_application.cc yolo_application.cc runner.cc)
+ADD_EXECUTABLE(proc test-runner.cc config.cc model.cc cuda.c image_opencv.cc image.cc box.cc region_wrapper.cc yolo_wrapper.cc coco.cc inference_application.cc yolo_application.cc runner.cc)
 TARGET_LINK_LIBRARIES(proc m config++ nvinfer tkDNN stdc++ ${CUDA_LIBRARIES} ${OpenCV_LIBS} kernels)
 
+ADD_EXECUTABLE(proc2 test-runner2.cc config.cc model.cc cuda.c image_opencv.cc image.cc box.cc region_wrapper.cc yolo_wrapper.cc coco.cc inference_application.cc yolo_application.cc runner2.cc)
+TARGET_LINK_LIBRARIES(proc2 m config++ nvinfer tkDNN stdc++ ${CUDA_LIBRARIES} ${OpenCV_LIBS} kernels)
+
 include_directories(.)
-add_library(tinyJEDI SHARED config.cc model.cc cuda.c image_opencv.cc image.cc box.cc region_wrapper.cc yolo_wrapper.cc coco.cc inference_application.cc yolo_application.cc runner.cc)
+add_library(tinyJEDI SHARED config.cc model.cc cuda.c image_opencv.cc image.cc box.cc region_wrapper.cc yolo_wrapper.cc coco.cc inference_application.cc yolo_application.cc runner.cc runner2.cc)
 TARGET_LINK_LIBRARIES(tinyJEDI m config++ nvinfer tkDNN stdc++ ${CUDA_LIBRARIES} ${OpenCV_LIBS} kernels)
 
 install(TARGETS tinyJEDI DESTINATION /usr/lib)
 
-install(FILES runner.h cuda.h coco.h model.h inference_application.h yolo_application.h region_wrapper.h yolo_wrapper.h image.h image_opencv.h variable.h config.h config_data.h box.h profiler.h DESTINATION include/tinyJEDI)
+install(FILES runner.h runner2.h cuda.h coco.h model.h inference_application.h yolo_application.h region_wrapper.h yolo_wrapper.h image.h image_opencv.h variable.h config.h config_data.h box.h profiler.h DESTINATION include/tinyJEDI)
