fix a bug related to handling dummy dla-core

--- a/onnx_detr.cfg
+++ b/onnx_detr.cfg
@@ -4,29 +4,32 @@ configs = {
 		{
 			app_type="DETROnnxApplication";
 			model_type="OnnxModel";
-			onnx_file_path="/sdcard/ykw6644/models/detr/detr_static.onnx";	
+			sample_size = "4952"			
 			network_name="detr";
-			model_dir = "/sdcard/ykw6644/models/detr/";
+
 			bin_path = "/sdcard/data/bin/leaky/yolo3";
 			cfg_path = "/sdcard/data/cfgs/416/yolo3.cfg";
 			image_path = "/sdcard/data/coco2017/all_images.txt";
 			calib_image_path = "/sdcard/data/coco2017/all_images.txt";
-			calib_images_num = "1000";
-			calib_table = "/sdcard/ykw6644/models/detr/detr_static.onnx-calibration.table";
+			calib_images_num = "100";
 			name_path = "/sdcard/data/coco.names";
+
+			onnx_file_path="/sdcard/ykw6644/models/detr/version2/detr_static_v2.onnx";	
+			model_dir = "/sdcard/ykw6644/models/detr/version2/";
+			calib_table = "/sdcard/ykw6644/models/detr/version2/detr_static_v2.onnx-calibration_histogram.table";
+			timing_cache_path = "/sdcard/ykw6644/models/detr/version2/detr_static_v2.onnx-timing.cache";
+
 			batch = "1"
+			pre_thread_num = "2"
+			post_thread_num = "2"
 			offset = "0";
-			sample_size = "4952"
-			
 			device_num = "1"
-			pre_thread_num = "1"
-			post_thread_num = "1"
-			buffer_num = "2"
-			streams = "1"
-			cut_points ="100000"
-			devices ="GPU"
-			dla_cores ="0"
-			data_type ="INT8"
+			buffer_num = "4"
+			streams = "1,1"
+			cut_points ="2807"
+			devices ="GPU,GPU"
+			dla_cores ="0,0"
+			data_type ="INT8,FP16"
 		}	
 	)
 }
